--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,24 @@
 micronaut:
-  application:
-    name: employee-crud
-
-datasources:
-  default:
-    url: jdbc:h2:mem:employeedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ""
-    schema-generate: CREATE_DROP
-    dialect: H2
-
-jpa:
-  default:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-
-  postgresql:
-    url: jdbc:postgresql://localhost:5432/employeedb
-    driverClassName: org.postgresql.Driver
-    username: postgres
-    password: password
-    schema-generate: CREATE_DROP
-    dialect: POSTGRES
+  router:
+    static-resources:
+      swagger:
+        paths: classpath:META-INF/swagger
+        mapping: /swagger/**
+    versioning:
+      enabled: true
+  openapi:
+    enabled: true
+    responses:
+      default:
+        '400':
+          description: "Bad Request"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '404':
+          description: "Not Found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
