С-005 Дополнительные правки аппликейшна, добавление зависимости

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation("io.micronaut.serde:micronaut-serde-jackson")
 
     // Для БД
+    implementation("io.micronaut.data:micronaut-data-jpa")
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
     implementation("io.micronaut.sql:micronaut-hibernate-jpa")
     implementation("io.micronaut.data:micronaut-data-tx-hibernate")
