--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 micronaut:
   router:
     static-resources:
-      swagger-ui:
-        paths: classpath:META-INF/swagger/views/swagger-ui
-        mapping: /swagger-ui/**
       swagger:
         paths: classpath:META-INF/swagger
         mapping: /swagger/**
@@ -13,10 +10,6 @@ micronaut:
     default:
       properties:
         hibernate:
-          hbm2ddl:
-            auto: update
-          show_sql: true
-          format_sql: true
   openapi:
     enabled: true
     responses:
@@ -33,11 +26,20 @@ micronaut:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  datasources:
-    default:
-      url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME}
-      driverClassName: org.postgresql.Driver
-      username: ${DB_USER}
-      password: ${DB_PASSWORD}
-      schema-generate: UPDATE
-      dialect: POSTGRES
+datasources:
+  default:
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME}
+    driverClassName: org.postgresql.Driver
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    schema-generate: UPDATE
+    dialect: POSTGRES
+
+jpa:
+  default:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
+        format_sql: true
