С-008 Удаление пропертей, небольшие доработки аппликейшена.
Убрали проперти, теперь имеем иммютабл-апи

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ micronaut:
         mapping: /swagger/**
     versioning:
       enabled: true
+  jpa:
+    default:
+      properties:
+        hibernate:
   openapi:
     enabled: true
     responses:
